--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<ol id="qunit-tests"></ol>
+	before_empty<div id="empty"></div>
 	<div id="just_text">Just text.</div>
 	<div id="text_within_element"><span>Text within an Element</span></div>
 	<div id="text_before_element">Text before <span>an Element</span></div>
